--- a/src/static/css/categories.less
+++ b/src/static/css/categories.less
@@ -137,3 +137,25 @@
         margin: 32px 0;
     }
 }
+
+// MOBILE
+
+@media screen and (max-width: 576px) {
+    .category-tag-button {
+        padding: 4px 8px;
+        font-size: 8px;
+
+        .category-tag-name {
+            line-height: 8px;
+        }
+
+        .category-tag-qty {
+            width: 23px;
+            height: 16px;
+
+            span {
+                line-height: 8px;
+            }
+        }
+    }
+}
