--- a/src/static/css/home.css
+++ b/src/static/css/home.css
@@ -496,6 +496,7 @@
     .home-services-cards {
         grid-row-start: initial;
         grid-column-end: initial;
+        flex-wrap: wrap;
     }
 
     .home-section-link {
