--- a/src/static/css/home.css
+++ b/src/static/css/home.css
@@ -410,7 +410,7 @@
     }
 
     .home-welcome-container {
-        margin: 32px 16px;
+        margin: 16px 16px 32px;
         grid-template-columns: 1fr;
         row-gap: 16px;
     }
