--- a/src/static/css/user.css
+++ b/src/static/css/user.css
@@ -1,5 +1,13 @@
 /* USER PROFILE */
 
+.user-profile-header-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 32px;
+}
+
 .user-profile-subheader {
     display: flex;
     align-items: center;
@@ -8,14 +16,22 @@
 
 .user-profile-modes {
     display: flex;
+    justify-content: flex-start;
     gap: 20px;
     margin: 32px 0;
+}
+
+.user-profile-modes-subheader {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 24px;
 }
 
 .user-profile-modes>button {
     background-color: rgb(115, 149, 231, 0.1);
     border-radius: 75px;
-    font-family: 'Noto Sans';
+    font-family: 'Noto Sans', sans-serif;
     font-style: normal;
     font-weight: 500;
     font-size: 14px;
@@ -125,4 +141,42 @@
     width: 120px;
     height: 120px;
     border-radius: 50%;
+}
+
+/* MOBILE */
+
+@media screen and (max-width: 576px) {
+    .user-profile-header-container {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 16px;
+        margin-bottom: 20px;
+    }
+
+    .user-profile-subheader {
+        gap: 16px;
+    }
+
+    .user-profile-modes {
+        justify-content: center;
+        gap: 10px;
+        margin: 20px 0 32px;
+    }
+
+    .user-profile-modes-subheader {
+        flex-direction: column;
+        align-items: flex-start;
+        gap: 16px;
+    }
+
+    .user-profile-modes>button {
+        font-size: 10px;
+        line-height: 10px;
+        padding: 14px 16px;
+    }
+
+    .user-profile-photo {
+        width: 40px;
+        height: 40px;
+    }
 }
