--- a/src/static/css/user.css
+++ b/src/static/css/user.css
@@ -50,6 +50,7 @@
 
 .user-profile-edit-container {
     display: flex;
+    flex-direction: row;
     align-items: flex-start;
     gap: 48px;
     margin-top: 48px;
@@ -57,6 +58,7 @@
 
 .user-profile-edit-photo {
     position: relative;
+    line-height: 0;
 }
 
 .user-profile-edit-photo-input {
@@ -94,11 +96,10 @@
     font-size: 16px;
     line-height: 16px;
     color: #16181B;
+    box-sizing: border-box;
 }
 
 .user-profile-edit-info>label {
-    font-family: 'Noto Sans';
-    font-style: normal;
     font-weight: 400;
     font-size: 14px;
     line-height: 14px;
@@ -173,6 +174,40 @@
         font-size: 10px;
         line-height: 10px;
         padding: 14px 16px;
+    }
+
+    .user-profile-edit-container {
+        flex-direction: column;
+        align-items: center;
+        gap: 24px;
+        margin-top: 24px;
+    }
+
+    .user-profile-edit-info>input {
+        padding: 0 20px;
+        height: 42px;
+        font-size: 12px;
+        line-height: 12px;
+    }
+
+    .user-profile-edit-info>label {
+        font-size: 12px;
+        line-height: 16px;
+    }
+
+    .user-profile-edit-info>label>input {
+        margin-right: 12px;
+    }
+
+    .user-profile-edit-info>button {
+        width: 180px;
+        margin-top: 48px;
+        justify-self: center;
+    }
+
+    .user-profile-edit-delete {
+        font-size: 10px;
+        line-height: 10px;
     }
 
     .user-profile-photo {
