--- a/src/static/css/addservice.less
+++ b/src/static/css/addservice.less
@@ -12,7 +12,7 @@
     z-index: 100;
     height: 90%;
     overflow: auto;
-    font-family: 'Montserrat';
+    font-family: 'Montserrat', sans-serif;
     font-style: normal;
 
     img {
@@ -44,7 +44,7 @@
         textarea {
             border: 1px solid rgba(45, 67, 121, calc(0.6 * 0.4));
             border-radius: 32px;
-            font-family: 'Montserrat';
+            font-family: 'Montserrat', sans-serif;
             font-style: normal;
             font-weight: 400;
             font-size: 16px;
@@ -75,7 +75,8 @@
     }
 
     label {
-        display: flex;
+        display: grid;
+        grid-template-columns: auto auto;
         gap: 24px;
         text-align: left;
 
@@ -104,6 +105,78 @@
 
             div {
                 float: right;
+            }
+        }
+    }
+}
+
+// MOBILE
+
+@media screen and (max-width: 576px) {
+    .add-service-popup {
+        width: 100%;
+        top: 8%;
+        left: 0;
+        transform: none;
+        border-radius: 24px 24px 0 0;
+        padding: 24px 16px 40px;
+        height: 92%;
+
+        img {
+            width: 295px;
+            height: 168px;
+            margin-bottom: 27px;
+        }
+
+        h3 {
+            font-weight: 600;
+            font-size: 20px;
+            line-height: 20px;
+        }
+
+        p {
+            font-size: 10px;
+            line-height: 14px;
+            margin-bottom: 20px;
+        }
+
+        form {
+
+            input,
+            textarea {
+                font-size: 12px;
+                line-height: 12px;
+                padding: 16px 20px;
+            }
+
+            input {
+                height: 42px;
+                margin-bottom: 12px;
+            }
+
+            textarea {
+                height: 64px;
+                border-radius: 20px;
+            }
+        }
+    }
+
+    .add-service-privacy {
+        margin: 24px 0 40px;
+
+        label {
+            font-size: 12px;
+            line-height: 16px;
+
+            .add-service-checkbox-button {
+                width: 48px;
+                height: 24px;
+                padding: 2px;
+
+                div {
+                    width: 20px;
+                    height: 20px;
+                }
             }
         }
     }
