--- a/src/static/css/categories.less
+++ b/src/static/css/categories.less
@@ -91,6 +91,7 @@
 
 .categories-list-modes {
     display: flex;
+    flex-direction: row;
     gap: 64px;
     margin: 40px 0;
 
@@ -118,7 +119,7 @@
         span {
             width: 32px;
             height: 24px;
-            font-family: 'Montserrat';
+            font-family: 'Montserrat', sans-serif;
             font-style: normal;
             font-weight: 600;
             font-size: 12px;
@@ -156,6 +157,43 @@
             span {
                 line-height: 8px;
             }
+        }
+    }
+
+    .categories-list-modes {
+        flex-direction: column;
+        gap: 20px;
+        margin: 24px 0;
+
+        span {
+            font-size: 12px;
+            line-height: 12px;
+        }
+    }
+
+    .categories-list-main-category {
+        margin: 24px 0;
+
+        .categories-list-main-category-header {
+            align-items: flex-end;
+            gap: 6px;
+            margin-bottom: 16px;
+
+            h3 {
+                font-size: 20px;
+                line-height: 20px;
+            }
+
+            span {
+                width: 23px;
+                height: 16px;
+                font-size: 8px;
+                line-height: 8px;
+            }
+        }
+
+        hr {
+            margin: 16px 0;
         }
     }
 }
