--- a/src/static/css/feedback.css
+++ b/src/static/css/feedback.css
@@ -171,7 +171,7 @@
     border-radius: 24px;
     padding: 32px;
     z-index: 100;
-    font-family: 'Montserrat';
+    font-family: 'Montserrat', sans-serif;
     font-style: normal;
     width: 600px;
     box-sizing: border-box;
@@ -395,5 +395,23 @@
     .feedback-service-likes span {
         font-size: 10px;
         line-height: 10px;
+    }
+
+    .feedback-popup-container {
+        left: 0;
+        transform: none;
+        padding: 16px 16px 40px;
+        border-radius: 24px 24px 0 0;
+        width: 100%;
+    }
+
+    .feedback-popup-columns {
+        gap: 12px;
+    }
+
+    .feedback-popup-columns h3 {
+        font-weight: 600;
+        font-size: 20px;
+        line-height: 24px;
     }
 }
