--- a/src/static/css/ui.css
+++ b/src/static/css/ui.css
@@ -178,4 +178,13 @@
         font-size: 12px;
         line-height: 32px;
     }
+
+    .popup-close-button {
+        width: 12px;
+        height: 12px;
+        top: 16px;
+        right: 16px;
+        font-size: 12px;
+        line-height: 12px;
+    }
 }
