feedback popup mobile

--- a/src/static/css/feedback.css
+++ b/src/static/css/feedback.css
@@ -199,6 +199,10 @@
     margin-bottom: 12px;
 }
 
+.feedback-popup-search {
+    margin-top: 0;
+}
+
 .feedback-popup-search input {
     width: 100%;
     padding: 16px 28px 16px 0;
@@ -290,7 +294,7 @@
 .feedback-popup-main>textarea {
     border: 1px solid rgba(45, 67, 121, calc(0.6 * 0.4));
     border-radius: 32px;
-    font-family: 'Montserrat';
+    font-family: 'Montserrat', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
@@ -413,5 +417,62 @@
         font-weight: 600;
         font-size: 20px;
         line-height: 24px;
+        margin-bottom: 0;
+    }
+
+    .feedback-popup-search {
+        margin-top: 12px;
+    }
+
+    .feedback-popup-search input {
+        padding: 12px 28px 12px 0;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 12px;
+    }
+
+    .feedback-popup-search button {
+        margin-top: 10px;
+        right: 28px;
+    }
+
+    .feedback-popup-search i {
+        font-size: 10px;
+    }
+
+    .feedback-popup-services-list {
+        height: 230px;
+    }
+
+    .feedback-popup-services-list-item span {
+        font-weight: 300;
+        font-size: 10px;
+        line-height: 10px;
+    }
+
+    .feedback-popup-rating {
+        gap: 16px;
+        margin: 24px 0;
+    }
+
+    .feedback-popup-rating>span {
+        font-size: 10px;
+        line-height: 10px;
+    }
+
+    .feedback-popup-stars {
+        gap: 10px;
+    }
+
+    .feedback-popup-stars i {
+        font-size: 16px;
+    }
+
+    .feedback-popup-main>textarea {
+        border-radius: 20px;
+        font-size: 12px;
+        padding: 16px 20px;
+        height: 64px;
+        margin-bottom: 40px;
     }
 }
