--- a/src/static/css/addservice.less
+++ b/src/static/css/addservice.less
@@ -12,7 +12,7 @@
     z-index: 100;
     height: 90%;
     overflow: auto;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Noto Sans', sans-serif;
     font-style: normal;
 
     img {
@@ -44,7 +44,7 @@
         textarea {
             border: 1px solid rgba(45, 67, 121, calc(0.6 * 0.4));
             border-radius: 32px;
-            font-family: 'Montserrat', sans-serif;
+            font-family: 'Noto Sans', sans-serif;
             font-style: normal;
             font-weight: 400;
             font-size: 16px;
