--- a/src/static/css/feedback.css
+++ b/src/static/css/feedback.css
@@ -171,7 +171,7 @@
     border-radius: 24px;
     padding: 32px;
     z-index: 100;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Noto Sans', sans-serif;
     font-style: normal;
     width: 600px;
     box-sizing: border-box;
@@ -294,7 +294,7 @@
 .feedback-popup-main>textarea {
     border: 1px solid rgba(45, 67, 121, calc(0.6 * 0.4));
     border-radius: 32px;
-    font-family: 'Montserrat', sans-serif;
+    font-family: 'Noto Sans', sans-serif;
     font-style: normal;
     font-weight: 400;
     font-size: 16px;
