--- a/src/static/css/login.less
+++ b/src/static/css/login.less
@@ -10,8 +10,8 @@
     padding: 64px 48px 32px;
     text-align: center;
     z-index: 100;
-    font-family: 'Montserrat', sans-serif;
-    font-style: normal;
+    // font-family: 'Montserrat', sans-serif;
+    // font-style: normal;
     width: 600px;
     box-sizing: border-box;
 
