--- a/src/static/css/layout.less
+++ b/src/static/css/layout.less
@@ -101,6 +101,7 @@
 
 .header-breadcrumbs {
     margin-top: 40px;
+    display: block;
 
     &>ul {
         list-style-type: none;
@@ -268,6 +269,10 @@
     }
 
     .header-user {
+        display: none;
+    }
+
+    .header-breadcrumbs {
         display: none;
     }
 
