--- a/src/static/css/global.css
+++ b/src/static/css/global.css
@@ -196,7 +196,7 @@ hr {
 @media screen and (max-width: 576px) {
     .page-main-container {
         width: 100%;
-        padding: 0 16px;
+        padding: 24px 16px 0;
     }
 
     .section-header-container {
