--- a/src/static/css/articles.css
+++ b/src/static/css/articles.css
@@ -137,12 +137,12 @@
 
 @media screen and (max-width: 576px) {
     .articles-cards {
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
         column-gap: 23px;
     }
 
     .article-card-container {
-        width: 160px;
+        width: 100%;
     }
 
     .article-card-image {
@@ -150,7 +150,8 @@
     }
 
     .article-card-image img {
-        height: 120px;
+        height: 100%;
+        min-height: 120px;
         border-radius: 12px;
     }
 
