--- a/src/static/css/addservice.less
+++ b/src/static/css/addservice.less
@@ -115,12 +115,14 @@
 @media screen and (max-width: 576px) {
     .add-service-popup {
         width: 100%;
-        top: 8%;
+        top: auto;
         left: 0;
+        bottom: 0;
         transform: none;
         border-radius: 24px 24px 0 0;
         padding: 24px 16px 40px;
-        height: 92%;
+        max-height: 92%;
+        height: auto;
 
         img {
             width: 295px;
