--- a/src/static/css/categories.less
+++ b/src/static/css/categories.less
@@ -160,6 +160,20 @@
         }
     }
 
+    .category-tag-input {
+        &+label {
+            padding: 4px 8px;
+            font-size: 8px;
+            line-height: 8px;
+
+            span {
+                width: 23px;
+                height: 16px;
+                line-height: 8px;
+            }
+        }
+    }
+
     .categories-list-modes {
         flex-direction: column;
         gap: 20px;
