--- a/src/static/css/feedback.css
+++ b/src/static/css/feedback.css
@@ -403,7 +403,9 @@
     }
 
     .feedback-popup-container {
+        top: auto;
         left: 0;
+        bottom: 0;
         transform: none;
         padding: 16px 16px 40px;
         border-radius: 24px 24px 0 0;
