--- a/src/static/css/home.css
+++ b/src/static/css/home.css
@@ -351,6 +351,7 @@
     background: linear-gradient(99.72deg, #AAD1FC 17.77%, #76ACE8 79.02%);
     border-radius: 24px;
     position: relative;
+    height: auto;
 }
 
 .home-subscription-container h2 {
@@ -618,6 +619,7 @@
         padding: 12px 16px;
         flex-direction: column;
         align-items: flex-start;
+        height: 148px;
     }
 
     .home-subscription-container h2 {
