--- a/src/static/css/login.less
+++ b/src/static/css/login.less
@@ -67,7 +67,9 @@
 
 @media screen and (max-width: 576px) {
     .login-popup-container {
+        top: auto;
         left: 0;
+        bottom: 0;
         transform: none;
         padding: 45px 16px 40px;
         border-radius: 24px 24px 0 0;
