--- a/src/static/css/home.css
+++ b/src/static/css/home.css
@@ -92,7 +92,7 @@
     width: 350px;
 }
 
-.home-categories-search-field>input {
+.home-categories-search-input {
     width: 100%;
     border: 1px solid rgba(45, 67, 121, 0.4);
     border-radius: 32px;
@@ -107,12 +107,34 @@
     box-sizing: border-box;
 }
 
+.home-categories-search-input.active {
+    padding: 0 92px 0 24px;
+}
+
 .home-categories-search-field>i {
     float: right;
     font-size: 20px;
     color: #386BEE;
     margin-top: -33px;
     margin-right: 18px;
+}
+
+.home-categories-search-field>button {
+    float: right;
+    font-family: 'Noto Sans', sans-serif;
+    font-style: normal;
+    font-weight: 500;
+    font-size: 14px;
+    line-height: 14px;
+    color: #386BEE;
+    background: #eff3ff;
+    border-radius: 12px;
+    padding: 6px 8px;
+    margin-top: -37px;
+    margin-right: 18px;
+    cursor: pointer;
+    position: relative;
+    z-index: 1;
 }
 
 /* HOME SECTION */
@@ -489,17 +511,27 @@
         width: auto;
     }
 
-    .home-categories-search-field>input {
+    .home-categories-search-input {
         padding: 0 46px 0 20px;
         font-size: 10px;
         line-height: 10px;
         height: 42px;
     }
 
+    .home-categories-search-input.active {
+        padding: 0 80px 0 20px;
+    }
+
     .home-categories-search-field>i {
         font-size: 16px;
         margin-top: -29px;
         margin-right: 20px;
+    }
+
+    .home-categories-search-field>button {
+        font-size: 10px;
+        line-height: 10px;
+        margin-top: -32px;
     }
 
     .home-section-common-container {
